2021-05-22:

	2.5.1 released.

	* Fixed incorrect delete statement in ROMImage dtor, affects memory deallocations
	  of full ROMImages created by merging partial ones. (#60)

2021-04-02:

	2.5.0 released.

	* Added support for partial ROM images that may be dumped from several supported hardware
	  models. Previously, those had to be either concatenated or interleaved for the emulation
	  engine to accept. (#44)
	* Added a few API extensions to better handle ROM images that can now be either full and /
	  or partial, including iteration over several ROM files to find ones compatible with
	  particular model of hardware units. (#47)
	* Various improvements in build and packaging, in particular:
	  * added generation of pkg-config file; (#43)
	  * started symbol versioning for fine-grained documenting API changes yet to simplify
	    looking up the minimum version of the library required by a caller application; (#46)
	  * a new build option libmt32emu_WITH_VERSION_TAGGING enables tagging the shared object
	    with the library version and facilitates an automatic runtime version check
	    in the client application; (#46)
	  * for the GNU and Clang compilers, a new build option libmt32emu_WITH_SYMBOL_VERSIONING
	    is now available that adds versions of version tags and C-compatible API symbols
	    on supported platforms (e.g. Linux, FreeBSD, Solaris). (#46)
	* Fixed undefined behaviour that the TVP emulation code may exhibit. (#51)

2021-01-17:

	2.4.2 released.

	* Reworked the support for accessing ROM files with localised pathnames introduced in 2.3.0.
	  Since it is not really necessary in majority of cases but may nevertheless update global
	  C and C++ locale settings, it must now be explicitly enabled with the new Cmake option
	  libmt32emu_INSTALL_DEFAULT_LOCALE. Also, it no longer touches the global C++ locale
	  even if enabled, since that appears to have no positive effect. So far, it has been found