@@ -41,6 +41,9 @@ Laust "Talus" Brock-Nannestad
 "IssaUt"
  - Dumped the MT-32 v2.07 control ROM.
 
+"Cloudschatze"
+ - Dumped the CM-32LN v1.00 control ROM. Helped with analysis of quirks of the 3rd-gen devices.
+
 Also thanks go to Kaminari Redux, NewRisingSun, robertmo, ripsaw8080, Mau1wurf1977 and other inhabitants of VOGONS
 for their suggestions and help with debugging.
 
